[IMPROVEMENT] fix redactor z-index issue in admin backend

--- a/templates/css/admin_backend.css
+++ b/templates/css/admin_backend.css
@@ -600,6 +600,7 @@ select.form-control { padding-left:8px; padding-right:8px; }
 /* redactor overrule */
 .form-group .col-md-10 .redactor-box { margin-bottom:0; }
 .redactor-box textarea { font-size:14px; line-height: 1.6em; font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif; padding:20px; }
+.redactor-editor, .redactor-box, .redactor-box textarea { z-index:8888890; }
 
 /* select2 overrule */
 .select2-container .select2-choice { height:34px; padding-left:12px; }
